--- a/config/selectors.yaml
+++ b/config/selectors.yaml
@@ -5,9 +5,11 @@ login_page:
   login_button: "[data-cy='login-entrar-button']"
 
 home_page:
-  # Exemplo: Seletor para um menu de usuário que aparece após o login
-  user_menu: "#user-profile-menu"
+  sidebar_tax: "#sidemenu-item-3"
+  sidebar_tax_integration: "#sidemenu-item-51"
+  sidebar_tax_integration_export: "#sidemenu-item-1800"
 
 export_page:
-  # Exemplo: Seletor para o botão de iniciar o download
-  download_button: "button[data-testid='start-download']"
+  legado_frame: "//iframe[@id='legadoFrame']"
+  include_button: "#botaoIncluir"
+  popup_frame: "//iframe[@id='frameExportacaoDocumento']"
