--- a/config/selectors.yaml
+++ b/config/selectors.yaml
@@ -13,6 +13,13 @@ export_page:
   legado_frame: "//iframe[@id='legadoFrame']"
   popup_frame: "//iframe[@id='frameExportacaoDocumento']"
   include_button: "#botaoIncluir"
+  document_type_dropdown: "#documentos"
+  emitter_dropdown: "#emissor"
+  operation_type_dropdown: "#tipoDeOperacao" 
+  operation_type_span: "#select2-tipoDeOperacao-container"
+  file_type_dropdown: "#tipoArquivo"
+  invoice_situation_dropdown: "#situacaoNota"
+  stores_input: "input[role='listbox']"
+  stores_selector: "input[role='listbox']"
   start_date_input: "#dataInicio"
   end_date_input: "#dataFim"
-  document_type_dropdown: "#documentos"
