--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,10 @@ services:
     build: .
     command: celery -A tasks worker --loglevel=info
     volumes:
-      - ./downloads:/app/downloads
-      - '/mnt/r/XML_ASINCRONIZAR/ZZ_XML_BAIXADO_POR_ROBO/GRUPO MARIA SELMA:/app/downloads/processed'
+      - ./downloads/pending:/app/downloads/pending
+
+      - '/mnt/c/botDownloads/bot-xml-gms:/app/downloads/processed'
+
       - ./logs:/app/logs
     depends_on:
       - redis
