Refactor: Remove FastAPI API implementation and replace with RabbitMQ worker
- Deleted api.py and tasks.py, transitioning from FastAPI to a RabbitMQ-based worker architecture.
- Introduced worker.py to handle task consumption from RabbitMQ and report status to Maestro API.
- Updated settings.py to include new configuration options for RabbitMQ and logging.
- Enhanced bot_runner.py to support task execution without Celery, maintaining internal state and progress reporting.
- Modified docker-compose.yml to reflect changes in service architecture, removing the API service and adding RabbitMQ configuration.
- Updated requirements.txt to include necessary dependencies for the new architecture.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,64 @@
 # .dockerignore
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
 venv/
 .venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
+env/
+ENV/
+build/
+develop-eggs/
+dist/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 .pytest_cache/
 .coverage
-.git/
-.idea/
+htmlcov/
+
+# IDEs
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Git
+.git/
+.gitignore
+.github/
+
+# Dados locais (serão montados como volumes)
 downloads/
 logs/
+*.log
+
+# Env (será passado via docker-compose)
+.env.local
+.env.*.local
+
+# Docker
+docker-compose.override.yml
+
+# Documentação
+README.md
+docs/
+
+# Testes
+tests/
