--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,24 @@
-fastapi==0.118.0
-uvicorn==0.37.0
-celery==5.5.3
-redis==5.2.1
+# Web Automation
 selenium==4.35.0
 webdriver-manager==4.0.2
+
+# Configuration
 python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
 PyYAML==6.0.2
+
+# Message Queue (RabbitMQ)
+pika==1.3.2
+
+# HTTP Client
+requests==2.31.0
+
+# XML Processing
+lxml==4.9.3
+
+# Logging
+colorlog==6.8.0
+
+# Utilities
+python-dateutil==2.8.2
