refactor: Atualiza configuração do logger para usar RotatingFileHandler para um único arquivo de log

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# ✨ Configurações de Ambiente do Bot XML GMS
+# Configurações de Ambiente do Bot XML GMS
 # Copie este arquivo para .env e configure com seus valores
 
 # Ambiente de execução
@@ -10,10 +10,10 @@ LOG_ENV=production
 LOG_LEVEL=INFO
 
 # Configuração de rotação de logs (quando LOG_ENV=development)
-LOG_MAX_BYTES=10485760  # 10MB
+LOG_MAX_BYTES=10485760
 LOG_BACKUP_COUNT=5
 
-# Credenciais GMS (opcional - podem vir do orquestrador na requisição HTTP)
+# Credenciais GMS
 # GMS_USER=seu_usuario_gms
 # GMS_PASSWORD=sua_senha_gms
 
