feat: add volume bind mount for downloads directory from container to host

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     networks:
       - maestro-network
     restart: unless-stopped
+    volumes:
+      - C:\Automations\bot-xml-gms\downloads:/app/downloads
 
 networks:
   maestro-network:
